--- a/MiniAccountingSystem/Pages/Accounts/Index.cshtml
+++ b/MiniAccountingSystem/Pages/Accounts/Index.cshtml
@@ -4,32 +4,43 @@
     ViewData["Title"] = "Chart of Accounts";
 }
 
+<style>
+    /* Simple CSS to make the tree look nice with indentation */
+    .account-tree ul {
+        padding-left: 20px;
+        list-style-type: none;
+    }
+
+    .account-tree li {
+        padding: 2px 0;
+    }
+</style>
+
 <h1>@ViewData["Title"]</h1>
 
-<p>
-    <a class="btn btn-primary" asp-page="Create">Create New Account</a>
-</p>
+<div class="mb-3">
+    @if (User.IsInRole("Admin") || User.IsInRole("Accountant"))
+    {
+        <a class="btn btn-primary" asp-page="Create">Create New Account</a>
+    }
 
-<table class="table table-bordered table-striped">
-    <thead>
-        <tr>
-            <th>Account Name</th>
-            <th>Parent Account</th>
-            <th>Actions</th>
-        </tr>
-    </thead>l
-    <tbody>
-        @* This is a loop. It will go through each account in the Model.Accounts list *@
-        @foreach (var account in Model.Accounts)
+    @* This is the form for our new Export button *@
+    <form method="post" style="display: inline;">
+        @* This special tag helper tells the system to call the OnPostExportToExcelAsync method *@
+        <button type="submit" class="btn btn-success" asp-page-handler="ExportToExcel">
+            Export to Excel
+        </button>
+    </form>
+</div>
+
+
+<div class="account-tree">
+    <ul>
+        @* We are now looping through our new "AccountTree" variable *@
+        @foreach (var node in Model.AccountTree)
         {
-            <tr>
-                <td>@account.AccountName</td>
-                <td>@account.ParentAccountName</td>
-                <td>
-                    <a asp-page="Edit" asp-route-id="@account.AccountId">Edit</a>|
-                    <a asp-page="Delete" asp-route-id="@account.AccountId" class="text-danger">Delete</a>
-                </td>
-            </tr>
+            @* We use our special "_AccountTreeItem" artist to draw each branch *@
+            <partial name="_AccountTreeItem" model="node" />
         }
-    </tbody>
-</table>
+    </ul>
+</div>
