--- a/MiniAccountingSystem/Pages/Shared/_Layout.cshtml
+++ b/MiniAccountingSystem/Pages/Shared/_Layout.cshtml
@@ -22,9 +22,23 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
+
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-page="/Accounts/Index">Chart of Accounts</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-page="/Vouchers/Index">Vouchers</a>
+                                </li>
+                            }
+
+                            @if (User.IsInRole("Admin"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-page="/Admin/Users">Manage Users</a>
+                                </li>
+                            }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
